classDiagram
class DiagnosticQuestionnaireVM{
  +Int32 TotalPoints
}

class EvenementReponseVM{
  +Int32 Id
  +String Nom
  +Int32 Points
  +Boolean Selectionne
}

class RessourcesVM{
  +String ImagePath
  +`Nullable<Int32>` ImageId
  +Int32 Id
  +String Title
  +String Description
  +String Url
  +String Category
  +String CreatedBy
  +DateTime CreatedAt
  +String UpdatedBy
  +DateTime UpdatedAt
  +Boolean Status
}

class Ressources{
  +Int32 Id
  +String Title
  +String Description
  +String Url
  +String Category
  +String CreatedBy
  +DateTime CreatedAt
  +String UpdatedBy
  +DateTime UpdatedAt
  +Boolean Status
}

class Images{
  +Int32 Id
  +String Image
}

class RessourcesImages{
  +Int32 RessourceId
  +Int32 ImageId
}

class RessourcesTags{
  +Int32 RessourceId
  +Int32 TagId
}

class Tags{
  +Int32 Id
  +String Label
}

class ExerciceConfigurations{
  +Int32 Id
  +String Label
  +Int32 InhaleDuration
  +Int32 HoldDuration
  +Int32 ExhaleDuration
  +Int32 ExerciceId
}

class Exercices{
  +Int32 Id
  +String Name
  +String Description
}

class Sessions{
  +Int32 Id
  +Int32 Cycles
  +DateTime StartedAt
  +DateTime EndedAt
  +String UserId
  +Int32 ExerciceConfigurationId
}

class AppUser{
  +TwoFactorType TwoFactorType
  +DateTime BirthDay
  +Gender Gender
  +DateTime CreatedOn
  +String FirstName
  +String LastName
  +Boolean IsMfaForce
  +Boolean IsLdapLogin
  +String Department
  +String ProfilePicture
  +Boolean IsEnabled
  +String RolesCombined
  +String Id
  +String UserName
  +String NormalizedUserName
  +String Email
  +String NormalizedEmail
  +Boolean EmailConfirmed
  +String PasswordHash
  +String SecurityStamp
  +String ConcurrencyStamp
  +String PhoneNumber
  +Boolean PhoneNumberConfirmed
  +Boolean TwoFactorEnabled
  +`Nullable<DateTimeOffset>` LockoutEnd
  +Boolean LockoutEnabled
  +Int32 AccessFailedCount
}

class DiagnosticEvenements{
  +Int32 Id
  +String Nom
  +Int32 Points
}

class DiagnosticReponses{
  +Int32 Id
  +Int32 DiagnosticSessionId
  +Int32 DiagnosticEvenementId
}

class DiagnosticSessions{
  +Int32 Id
  +DateTime DateDiagnostic
  +Int32 TotalPoints
  +String NiveauStress
  +String UserId
}

class <>c

DiagnosticQuestionnaireVM "0" o-- "*" EvenementReponseVM
Ressources <|-- RessourcesVM
RessourcesImages o-- Ressources
RessourcesImages o-- Images
RessourcesTags o-- Ressources
RessourcesTags o-- Tags
ExerciceConfigurations o-- Exercices
Sessions o-- AppUser
Sessions o-- ExerciceConfigurations
DiagnosticSessions o-- AppUser
DiagnosticReponses o-- DiagnosticSessions
DiagnosticReponses o-- DiagnosticEvenements
